--- a/src/containers/ChatContainer/ChatContainer.css
+++ b/src/containers/ChatContainer/ChatContainer.css
@@ -37,12 +37,16 @@ button {
 .right-panel {
   flex: 1;
   display: flex;
+  width: '100%';
+  height: '100%';
   flex-direction: column;
 }
 
 .message-list {
   flex: 1;
   min-width: 140px;
+  width: '100%';
+  height: '100%';
   overflow: auto;
 }
 
@@ -101,14 +105,15 @@ button {
 }
 
 .rce-example-messageList {
-  background: rgb(246 250 250);
-  border: 1px solid rgb(238, 235, 235);
-  height: 70vh;
+  background: #A6AEA5;
+  height: 100%;
+  width: 100%;
+  padding: 0px;
+  margin: 0px;
 }
 
 .rce-example-input textarea {
   border: 1px solid rgb(214, 213, 213);
-  border-radius: 0.5rem;
   overflow: hidden;
 }
 
