Update message field

--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ body {
 
 .view-button {
     border-radius: 4px; 
-    background-color: #2C5C67; 
+    background-color: #3A79AA; 
     color: white; 
     padding: 8px 16px; 
     border: none;
